Adds colour support to curses; simplifies cut loop logic; adds ability to step back a cut

--- a/ert.cfg
+++ b/ert.cfg
@@ -6,6 +6,7 @@ GpioEnablePin = 0
 StepsPerRev = 4000
 MaxMotorSpeed = 900
 BacklashCompensationSteps = 800
+DegreesPerRev = 5
 
 DefaultGearModule = 0.5
 MotorRpm = 120
